packages/SDL3/SDL_gpu.inc


  TSDL_GPUFence = record
  end;
  PSDL_GPUFence = ^TSDL_GPUFence;
  PPSDL_GPUFence = ^PSDL_GPUFence;

function SDL_GPUSupportsShaderFormats(format_flags: TSDL_GPUShaderFormat; Name: pansichar): Tbool; cdecl; external libSDL3;
function SDL_GPUSupportsProperties(props: TSDL_PropertiesID): Tbool; cdecl; external libSDL3;
function SDL_CreateGPUDevice(format_flags: TSDL_GPUShaderFormat; debug_mode: Tbool; Name: pansichar): PSDL_GPUDevice; cdecl; external libSDL3;
function SDL_CreateGPUDeviceWithProperties(props: TSDL_PropertiesID): PSDL_GPUDevice; cdecl; external libSDL3;

const
  SDL_PROP_GPU_DEVICE_CREATE_DEBUGMODE_BOOL = 'SDL.gpu.device.create.debugmode';
  SDL_PROP_GPU_DEVICE_CREATE_PREFERLOWPOWER_BOOL = 'SDL.gpu.device.create.preferlowpower';
  SDL_PROP_GPU_DEVICE_CREATE_NAME_STRING = 'SDL.gpu.device.create.name';
  SDL_PROP_GPU_DEVICE_CREATE_SHADERS_PRIVATE_BOOL = 'SDL.gpu.device.create.shaders.private';
  SDL_PROP_GPU_DEVICE_CREATE_SHADERS_SPIRV_BOOL = 'SDL.gpu.device.create.shaders.spirv';
  SDL_PROP_GPU_DEVICE_CREATE_SHADERS_DXBC_BOOL = 'SDL.gpu.device.create.shaders.dxbc';
  SDL_PROP_GPU_DEVICE_CREATE_SHADERS_DXIL_BOOL = 'SDL.gpu.device.create.shaders.dxil';
  SDL_PROP_GPU_DEVICE_CREATE_SHADERS_MSL_BOOL = 'SDL.gpu.device.create.shaders.msl';
  SDL_PROP_GPU_DEVICE_CREATE_SHADERS_METALLIB_BOOL = 'SDL.gpu.device.create.shaders.metallib';
  SDL_PROP_GPU_DEVICE_CREATE_D3D12_SEMANTIC_NAME_STRING = 'SDL.gpu.device.create.d3d12.semantic';
